samples/_failures_safe/1761076810_d3e6f2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_127df928.c:153: error: expected ‘;’, ‘,’ or ‘)’ at end of input
